@@ -150,6 +150,10 @@ with all sufficient information, see the ChangeLog file.
     * Readline.completion_proc= accepts nil.
       nil means to use default completion proc.
 
+* time
+  * incompatible changes:
+    * Time.parse raises ArgumentError when no date information.
+
 === Compatibility issues (excluding feature bug fixes)
 
   * Enumerator#rewind
